--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
 <body>
   <div class="container">
     <h1 class="title">Antoine Dubé</h1>
-    <div class="icon left"><i class="fa fa-2x fa-github-square"></i></div>
-    <div class="icon right"><i class="fa fa-2x fa-linkedin-square"></i></div>
+    <div class="icon left">
+      <a href="https://github.com/antoinedube">
+        <i class="fa fa-2x fa-github-square"></i>
+      </a>
+    </div>
+    <div class="icon right">
+      <a href="https://www.linkedin.com/in/antoinedube">
+        <i class="fa fa-2x fa-linkedin-square"></i>
+      </a>
+    </div>
   </div>
 </body>
 
